adding .gitignore file

--- a/Chapter_2.ipynb
+++ b/Chapter_2.ipynb
@@ -37,7 +37,8 @@
             "execution_count": 1,
             "source": [
                 "import $ivy.`org.apache.spark::spark-sql:3.1.1`\n",
-                "import org.apache.spark.sql._"
+                "import org.apache.spark.sql._\n",
+                "import org.apache.log4j.{Level, Logger}"
             ],
             "outputs": [
                 {
@@ -59,7 +60,6 @@
             "cell_type": "code",
             "execution_count": 2,
             "source": [
-                "import org.apache.log4j.{Level, Logger}\n",
                 "Logger.getLogger(\"org\").setLevel(Level.WARN)"
             ],
             "outputs": [
